# msa-turboquant

./: .gitattributes  .gitignore  README.md  demo.py  demo_real_model.py  demo_scale.py  demo_stretch.py  pyproject.toml  requirements.txt
configs/: benchmarks.yaml  compression.yaml  experiment.yaml  model.yaml  retrieval.yaml
docs/: PROJECT_SPEC.md
src/: __init__.py  main.py
src/compression/: __init__.py  base.py  bitpack.py  fp16.py  int4.py  int8.py  kivi.py  rotated_uniform.py  turboquant_like.py  turboquant_mse.py
src/eval/: niah.py  profiler.py  retrieval_metrics.py  run_eval.py  systems_metrics.py
src/experiments/: run_scale_sweep.py  sweep_config.py  sweep_plots.py
src/memory/: bank_builder.py  bank_cache.py  bank_store.py  chunking.py  fetcher.py  interleave.py  kv_injector.py  router.py
src/models/: base_model.py  hf_model.py  kv_extractor.py
src/utils/: config.py  io_utils.py  logging_utils.py  plotting.py  profiling.py
tests/: conftest.py  test_bank_store.py  test_chunking.py  test_compression.py  test_config.py  test_eval.py  test_io_utils.py  test_kv_injector.py  test_logging.py  test_models.py  test_niah.py  test_profiler.py  test_profiling.py  test_router.py  test_sweep.py  test_turboquant.py
